SimpleWeather: replace Toasts with Snackbars where possible
* Replace all Toasts/MessageDialogs with Snackbars where possible
* Remove Toasts code from shared library (this shouldn't be there)
* Catch exceptions in Application code not "library" code
* Update comments to include possible thrown Exceptions

--- a/SimpleWeather.UWP/Main/LocationSearchPage.xaml
+++ b/SimpleWeather.UWP/Main/LocationSearchPage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<helpers:CustomPage
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     x:Class="SimpleWeather.UWP.Main.LocationSearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -21,4 +22,4 @@
                                               QuerySubmitted="Location_QuerySubmitted" HeaderText="Add a location"
                                               x:Uid="LocationSearchHint" PlaceholderText="Enter Location" />
     </Grid>
-</Page>
+</helpers:CustomPage>
