--- a/SimpleWeather.UWP/Main/LocationsPage.xaml
+++ b/SimpleWeather.UWP/Main/LocationsPage.xaml
@@ -1,9 +1,10 @@
-﻿<Page
+﻿<helpers:CustomPage
     x:Class="SimpleWeather.UWP.Main.LocationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:ui="using:Microsoft.UI.Xaml.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -91,4 +92,4 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
-</Page>
+</helpers:CustomPage>
