--- a/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
@@ -204,26 +204,26 @@
 
         <ToggleButton x:Name="DetailHeader" Background="{ThemeResource RegionBrush}" Style="{StaticResource DetailPanelToggleButtonStyle}" Grid.Row="0"
                       Foreground="{ThemeResource ColorTextDarkForeground}" IsChecked="False" IsEnabled="{x:Bind ViewModel.HasExtras, Mode=OneWay}">
-            <Grid>
+            <Grid MinHeight="60">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Viewbox Name="IconBox" Height="50" Width="50" Margin="8,0" Grid.Column="0">
+                <Viewbox Name="IconBox" Height="50" Width="50" Margin="8,0" VerticalAlignment="Center" Grid.Column="0">
                     <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.Icon, FallbackValue='&#xf00d;', Mode=OneWay}"
                                Foreground="{ThemeResource ColorTextDarkForeground}" Style="{StaticResource WeatherIcon}"/>
                 </Viewbox>
-                <StackPanel Orientation="Vertical" Grid.Column="1">
+                <StackPanel Orientation="Vertical" Grid.Column="1" VerticalAlignment="Center">
                     <TextBlock x:Name="Date" Text="{x:Bind ViewModel.Date, FallbackValue='Someday XX', Mode=OneWay}" FontWeight="Bold" Padding="2" MaxLines="1"
                                TextTrimming="CharacterEllipsis"/>
                     <TextBlock x:Name="Condition" Text="{x:Bind ViewModel.Condition, FallbackValue='50º / 44º - Sprinkles early. Mostly cloudy. Mild', Mode=OneWay}"
                                Padding="2" MaxLines="1"
                                FontSize="{x:Bind Date.FontSize, Mode=OneWay}" TextTrimming="CharacterEllipsis"
                                VerticalAlignment="Center" />
-                    <TextBlock x:Name="Extra" Text="{x:Bind ViewModel.Extra, FallbackValue='&#xf078; 100%&#x2003;&#xf050; 5 mph, WNW', Mode=OneWay}"
+                    <TextBlock x:Name="Extra" Text="{x:Bind ViewModel.ForecastExtra, FallbackValue='&#xf078; 100%&#x2003;&#xf050; 5 mph, WNW', Mode=OneWay}"
                                Padding="2" MaxLines="1" FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons"
                                FontSize="{x:Bind Date.FontSize, Mode=OneWay}" Foreground="{ThemeResource SimpleBlueLight}" TextTrimming="CharacterEllipsis"
-                               VerticalAlignment="Center" Visibility="{x:Bind ViewModel.Extra, Converter={StaticResource stringVisibilityConverter}}" />
+                               VerticalAlignment="Center" Visibility="{x:Bind ViewModel.ForecastExtra, Converter={StaticResource stringVisibilityConverter}}" />
                 </StackPanel>
             </Grid>
         </ToggleButton>
