--- a/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
@@ -85,14 +85,13 @@
         <ListView x:Name="ListControl" SelectionMode="None" IsItemClickEnabled="False" Grid.Row="1"
                   IsSwipeEnabled="False" AllowDrop="False" CanReorderItems="False" CanDragItems="False"
                   HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
-                  IncrementalLoadingTrigger="Edge" ShowsScrollingPlaceholders="False">
+                  IncrementalLoadingTrigger="Edge" ShowsScrollingPlaceholders="False"
+                  IncrementalLoadingThreshold="2" DataFetchSize="2">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Vertical">
-                        <Border Background="{ThemeResource ToggleButtonBackgroundThemeBrush}" BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}" BorderThickness="0,0,0,0.5">
-                            <localcontrols:WeatherDetailPanel x:Name="DetailItem" />
-                        </Border>
-                    </StackPanel>
+                    <Border Background="{ThemeResource ToggleButtonBackgroundThemeBrush}" BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}" BorderThickness="0,0,0,0.5">
+                        <localcontrols:WeatherDetailPanel x:Name="DetailItem" />
+                    </Border>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
