--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -243,7 +243,7 @@
                             Height="30" Padding="0" Background="OrangeRed"
                             HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
                             Click="AlertButton_Click"
-                            x:Load="{x:Bind WeatherView.Extras.Alerts, Mode=OneWay, Converter={StaticResource collectionBooleanConverter}}"
+                            x:Load="{x:Bind WeatherView.Alerts, Mode=OneWay, Converter={StaticResource collectionBooleanConverter}}"
                             Loaded="DeferedControl_Loaded"
                             Grid.Row="2">
                         <Button.Content>
@@ -311,7 +311,7 @@
                     </toolkitControls:HeaderedContentControl>
                 </StackPanel>
                 <StackPanel Name="HourlyForecastPanel" Margin="0,0,0,25"
-                            x:Load="{x:Bind WeatherView.Extras.HourlyForecast, Mode=OneWay, Converter={StaticResource collectionBooleanConverter}}"
+                            x:Load="{x:Bind WeatherView.HourlyForecasts, Mode=OneWay, Converter={StaticResource collectionBooleanConverter}}"
                             Loaded="DeferedControl_Loaded">
                     <Border Style="{ThemeResource Divider}" />
                     <toolkitControls:HeaderedContentControl Style="{ThemeResource SectionLabelStyle}" x:Uid="Label_Hourly" Header="Hourly"
@@ -330,7 +330,7 @@
                                 Style="{ThemeResource RightArrowButton}" Grid.Column="2" />
                             <localcontrols:ForecastGraphPanel x:Name="HourlyGraphPanel" Grid.Column="1"
                                                               GraphViewTapped="LineView_Tapped"
-                                                              Forecasts="{x:Bind WeatherView.Extras.HourlyForecast, Mode=OneWay}" />
+                                                              Forecasts="{x:Bind WeatherView.HourlyForecasts, Mode=OneWay}" />
                         </Grid>
                     </toolkitControls:HeaderedContentControl>
                 </StackPanel>
