--- a/SimpleWeather.UWP/Main/WeatherAlertPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherAlertPage.xaml
@@ -1,8 +1,9 @@
-﻿<Page
+﻿<helpers:CustomPage
     x:Class="SimpleWeather.UWP.Main.WeatherAlertPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -17,7 +18,7 @@
         </Grid.RowDefinitions>
         <Border Grid.Row="0" BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}" BorderThickness="0,0,0,0.5">
             <Viewbox Height="48" HorizontalAlignment="Left">
-                <TextBlock Text="{x:Bind WeatherView.Location, FallbackValue='New York, NY'}"
+                <TextBlock Text="{x:Bind WeatherView.Location, FallbackValue='New York, NY', Mode=OneWay}"
                            FontSize="16" Padding="16" />
             </Viewbox>
         </Border>
@@ -25,7 +26,7 @@
         <ScrollViewer HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled"
                       VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
                       Margin="10" Grid.Row="1">
-            <ItemsControl x:Name="StackControl" ItemsSource="{x:Bind WeatherView.Alerts}">
+            <ItemsControl x:Name="StackControl" ItemsSource="{x:Bind WeatherView.Alerts, Mode=OneWay}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate x:DataType="controls:WeatherAlertViewModel">
                         <StackPanel>
@@ -43,4 +44,4 @@
             </ItemsControl>
         </ScrollViewer>
     </Grid>
-</Page>
+</helpers:CustomPage>
