--- a/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherDetailsPage.xaml
@@ -1,8 +1,9 @@
-﻿<Page
+﻿<helpers:CustomPage
     x:Class="SimpleWeather.UWP.Main.WeatherDetailsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Main"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
     xmlns:uicontrols="using:Microsoft.UI.Xaml.Controls"
@@ -77,7 +78,7 @@
         </Grid.RowDefinitions>
         <Border Grid.Row="0" BorderBrush="{ThemeResource TextBoxDisabledBorderThemeBrush}" BorderThickness="0,0,0,0.5">
             <Viewbox Height="48" HorizontalAlignment="Left">
-                <TextBlock Text="{x:Bind WeatherView.Location, FallbackValue='New York, NY'}"
+                <TextBlock Text="{x:Bind WeatherView.Location, Mode=OneWay, FallbackValue='New York, NY'}"
                            FontSize="16" Padding="16" />
             </Viewbox>
         </Border>
@@ -106,4 +107,4 @@
             </ListView.ItemContainerStyle>
         </ListView>
     </Grid>
-</Page>
+</helpers:CustomPage>
